Fixing a lot basic.html, and little other files

--- a/fr/creating/index.html
+++ b/fr/creating/index.html
@@ -3,7 +3,7 @@ layout: fr_reference
 ---
 
 <div class="box">
-  <h2>Récupérer et Créer des Projets</h2>
+  <h2>Obtention et Création des Projets</h2>
   <div class="block">
     <p>
       Pour pouvoir faire quoi que ce soit avec Git, vous devez
@@ -14,7 +14,7 @@ layout: fr_reference
     <p>
       Il y a deux moyens d'avoir un dépôt Git. Le premier est de simplement
       en initialiser un depuis un dossier existant, comme un nouveau projet
-      ou un projet débutant sa gestion de révisions. Le second est de cloner
+      ou un projet débutant sa gestion de versions. Le second est de cloner
       un dépôt public Git, comme vous le feriez si vous vouliez une copie
       ou si vous vouliez collaborer avec quelqu'un sur un projet. Nous allons
       aborder chacun de ces cas.
@@ -27,17 +27,17 @@ layout: fr_reference
   <h2>
     <span class="docs">
       <a target="new" href="http://git-scm.com/docs/git-init">docs</a> &nbsp;
-      <a target="new" href="http://git-scm.com/book/fr/v2/Les-bases-de-Git-D%C3%A9marrer-un-d%C3%A9p%C3%B4t-Git#Initialisation-d’un-dépôt-Git-dans-un-répertoire-existant">book</a>
+      <a target="new" href="http://git-scm.com/book/fr/v2/Les-bases-de-Git-D%C3%A9marrer-un-d%C3%A9p%C3%B4t-Git#Initialisation-d’un-dépôt-Git-dans-un-répertoire-existant">livre</a>
     </span>
     <a name="init">git init</a>
-    <span class="desc">initialiser un répertoire comme dépôt Git</span>
+    <span class="desc">initialise un répertoire comme dépôt Git</span>
   </h2>
 
   <div class="block">
     <p>Pour créer un dépôt à partir d'un répertoire de fichiers existant,
       vous pouvez simplement faire <code>git init</code> dans ce répertoire.
       Par exemple, disons que nous avons un répertoire comprenant quelques fichiers,
-      ressemblant à:
+      ressemblant à :
     </p>
 
 <pre>
@@ -47,7 +47,7 @@ README   hello.rb
 </pre>
 
     <p>C'est un projet dans lequel nous écrivons des exemples de programmes
-      "Hello World" dans chaque langage. Pour l'instant, nous avons simplement Ruby,
+      « Hello World » dans chaque langage. Pour l'instant, nous avons simplement Ruby,
       mais ce n'est qu'un début. Pour commencer à en gérer les versions avec Git,
       nous pouvons simplement lancer <code>git init</code>.
     </p>
@@ -83,10 +83,10 @@ Dépôt Git vide initialisé dans /opt/konnichiwa/.git/
   <h2>
     <span class="docs">
       <a target="new" href="http://git-scm.com/docs/git-clone">docs</a> &nbsp;
-      <a target="new" href="http://git-scm.com/book/fr/v2/Les-bases-de-Git-D%C3%A9marrer-un-d%C3%A9p%C3%B4t-Git#Cloner-un-dépôt-existant">book</a>
+      <a target="new" href="http://git-scm.com/book/fr/v2/Les-bases-de-Git-D%C3%A9marrer-un-d%C3%A9p%C3%B4t-Git#Cloner-un-dépôt-existant">livre</a>
     </span>
     <a name="clone">git clone</a>
-    <span class="desc">copier un dépôt git pour pouvoir le modifier</span>
+    <span class="desc">copie un dépôt git pour pouvoir le modifier</span>
   </h2>
   <div class="block">
     <p>
@@ -129,7 +129,7 @@ config      index       <span class="blue">objects</span>
 
     <p>
       Par défaut, Git crée un dossier avec le même nom que le projet de l'URL
-      donnée - typiquement tout ce qui se trouve après le dernier slash de l'URL.
+      donnée—typiquement tout ce qui se trouve après le dernier slash de l'URL.
       Si vous voulez quelque chose de différent, vous pouvez l'indiquer à la fin
       de la commande, après l'URL.
     </p>
@@ -142,4 +142,4 @@ config      index       <span class="blue">objects</span>
   </div>
 </div>
 
-<p><a class="page-button next-page" href="/fr/basic">Aller à Bases des Instantanés &#187;</a></p>
+<p><a class="page-button next-page" href="/fr/basic">Aller à Capture d’Instantané Basique &#187;</a></p>
