fr/basic/index.html: hola mundo => bonjour monde

--- a/fr/basic/index.html
+++ b/fr/basic/index.html
@@ -263,7 +263,7 @@ index d62ac43..8d15d50 100644
 
    def self.hello
 <span class="red">-    puts "hello world"</span>
-<span class="green">+    puts "hola mundo"</span>
+<span class="green">+    puts "bonjour monde"</span>
    end
 
  end
@@ -316,7 +316,7 @@ index d62ac43..8d15d50 100644
 
    def self.hello
 <span class="red">-    puts "hello world"</span>
-<span class="green">+    puts "hola mundo"</span>
+<span class="green">+    puts "bonjour monde"</span>
    end
 
  end
@@ -346,7 +346,7 @@ index 4f40006..2ae9ba4 100644
 
 <span class="green">+  # says hello</span>
    def self.hello
-     puts "hola mundo"
+     puts "bonjour monde"
    end
 
  end
@@ -360,7 +360,7 @@ index 2aabb6e..4f40006 100644
 
    def self.hello
 <span class="red">-    puts "hello world"</span>
-<span class="green">+    puts "hola mundo"</span>
+<span class="green">+    puts "bonjour monde"</span>
    end
 
  end
@@ -375,7 +375,7 @@ index 2aabb6e..2ae9ba4 100644
 <span class="green">+  # says hello</span>
    def self.hello
 <span class="red">-    puts "hello world"</span>
-<span class="green">+    puts "hola mundo"</span>
+<span class="green">+    puts "bonjour monde"</span>
    end
 
  end
@@ -459,8 +459,8 @@ index 2aabb6e..2ae9ba4 100644
 <b>$ git add hello.rb </b>
 <b>$ git status -s</b>
 <span class="green">M</span>  hello.rb
-<b>$ git commit -m 'my hola mundo changes'</b>
-[master 68aa034] my hola mundo changes
+<b>$ git commit -m 'mes modifications bonjour monde'</b>
+[master 68aa034] mes modifications bonjour monde
  1 files changed, 2 insertions(+), 1 deletions(-)
 </pre>
 
